--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@huggingface/transformers": "^3.3.2",
+    "@langchain/community": "^0.3.28",
+    "@langchain/core": "^0.3.37",
     "gpt-tokenizer": "^2.8.1",
+    "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "vite-plugin-wasm": "^3.4.1",
     "voy-search": "^0.6.3"
   },
   "devDependencies": {
@@ -22,10 +26,13 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
