--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@huggingface/transformers": "^3.3.2",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
+    "eventemitter3": "^5.0.1",
     "gpt-tokenizer": "^2.8.1",
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
@@ -32,7 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.3",
+    "tailwindcss": "3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
