--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@huggingface/transformers": "^3.3.2",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
+    "@types/react-modal": "^3.16.3",
     "eventemitter3": "^5.0.1",
     "gpt-tokenizer": "^2.8.1",
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "vite-plugin-wasm": "^3.4.1",
     "voy-search": "^0.6.3"
   },
