--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
     "react-modal": "^3.16.3",
+    "react-router-dom": "^7.1.5",
     "vite-plugin-wasm": "^3.4.1",
     "voy-search": "^0.6.3"
   },
