feat: auth use supabase

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@huggingface/transformers": "^3.3.2",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
     "eventemitter3": "^5.0.1",
     "gpt-tokenizer": "^2.8.1",
