--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.37",
     "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
+    "dexie": "^4.0.11",
     "eventemitter3": "^5.0.1",
     "gpt-tokenizer": "^2.8.1",
     "lucide-react": "^0.474.0",
