--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@huggingface/transformers": "^3.3.2",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
+    "@mlc-ai/web-llm": "^0.2.78",
     "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
     "dexie": "^4.0.11",
+    "@wllama/wllama": "^2.2.0",
     "eventemitter3": "^5.0.1",
     "gpt-tokenizer": "^2.8.1",
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
