--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
     "@wllama/wllama": "^2.2.0",
+    "browser-image-compression": "^2.0.2",
     "dexie": "^4.0.11",
     "eventemitter3": "^5.0.1",
     "gpt-tokenizer": "^2.8.1",
