fix: avatar color

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
     "@wllama/wllama": "^2.2.0",
+    "axios": "^1.8.1",
     "browser-image-compression": "^2.0.2",
     "dexie": "^4.0.11",
     "eventemitter3": "^5.0.1",
+    "fast-average-color": "^9.4.0",
     "gpt-tokenizer": "^2.8.1",
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
