--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aislamov/diffusers.js": "^0.9.3",
+    "@headlessui/react": "^2.2.0",
     "@huggingface/transformers": "^3.3.2",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
@@ -25,16 +26,17 @@
     "eventemitter3": "^5.0.1",
     "fast-average-color": "^9.4.0",
     "gpt-tokenizer": "^2.8.1",
+    "jotai": "^2.12.1",
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.3",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
-    "recoil": "^0.7.7",
     "vite-plugin-cross-origin-isolation": "^0.1.6",
     "vite-plugin-wasm": "^3.4.1",
     "voy-search": "^0.6.3"
