--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ firebase-debug.log*
 .firebase/*
 
 .env
+
+# zero install
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
