--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fast-average-color": "^9.4.0",
     "gpt-tokenizer": "^2.8.1",
     "jotai": "^2.12.1",
+    "kokoro-js": "^1.2.0",
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
     "patch-package": "^8.0.0",
@@ -37,6 +38,7 @@
     "react-markdown": "^9.0.3",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
+    "uuid": "^11.1.0",
     "vite-plugin-cross-origin-isolation": "^0.1.6",
     "vite-plugin-wasm": "^3.4.1",
     "voy-search": "^0.6.3"
@@ -58,5 +60,5 @@
     "vite": "^6.0.5",
     "vite-plugin-remove-console": "^2.2.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.7.0"
 }
