--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mlc-ai/web-llm": "^0.2.78",
     "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
-    "@wllama/wllama": "^2.2.0",
+    "@wllama/wllama": "patch:@wllama/wllama@npm%3A2.2.0#~/.yarn/patches/@wllama-wllama-npm-2.2.0-86e3d72127.patch",
     "axios": "^1.8.1",
     "browser-image-compression": "^2.0.2",
     "dexie": "^4.0.11",
