feat: readme.md

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
     "@mlc-ai/web-llm": "^0.2.78",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@supabase/supabase-js": "^2.48.1",
     "@types/react-modal": "^3.16.3",
     "@wllama/wllama": "patch:@wllama/wllama@npm%3A2.2.0#~/.yarn/patches/@wllama-wllama-npm-2.2.0-86e3d72127.patch",
@@ -32,6 +35,7 @@
     "lucide-react": "^0.474.0",
     "onnxruntime-web": "^1.20.1",
     "patch-package": "^8.0.0",
+    "pdfjs-dist": "^5.1.91",
     "postinstall-postinstall": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
